add_subdirectory(administration)
add_subdirectory(msi_atomic_apply_acl_operations)
add_subdirectory(msi_atomic_apply_metadata_operations)
add_subdirectory(msi_get_agent_pid)
add_subdirectory(msi_touch)
add_subdirectory(msi_get_open_data_obj_l1desc_index)
add_subdirectory(msi_get_file_descriptor_info)
add_subdirectory(msi_get_hostname)
